--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -31,7 +31,7 @@ jobs:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}  # SonarQube Token (Add to GitHub secrets)
       run: |
         pip install pysonar-scanner
-        sonar-scanner \
+        pysonar-scanner \
           -Dsonar.projectKey=bsp1230 \
           -Dsonar.sources=. \
           -Dsonar.host.url= https://sonarcloud.io/project/overview?id=bsp1230_python-sonar\
